trunk/Archive2/9a/8439dc47eb449f/output
main.cpp:23:18: error: call to 'Get' is ambiguous
    std::cout << Get<Data<int>>().data.size() << std::endl;  // expected output is 2
                 ^~~~~~~~~~~~~~
main.cpp:5:8: note: candidate function [with T = Data<int>]
size_t Get();
       ^
main.cpp:13:9: note: candidate function [with T = Data<int>]
Data<T> Get() {
        ^
main.cpp:18:16: note: candidate function [with T = Data<int>]
std::vector<T> Get() {
               ^
main.cpp:24:18: error: call to 'Get' is ambiguous
    std::cout << Get<std::vector<int>>().size() << std::endl; // expected output is 3
                 ^~~~~~~~~~~~~~~~~~~~~
main.cpp:5:8: note: candidate function [with T = std::__1::vector<int, std::__1::allocator<int> >]
size_t Get();
       ^
main.cpp:13:9: note: candidate function [with T = std::__1::vector<int, std::__1::allocator<int> >]
Data<T> Get() {
        ^
main.cpp:18:16: note: candidate function [with T = std::__1::vector<int, std::__1::allocator<int> >]
std::vector<T> Get() {
               ^
2 errors generated.
